APB-288 bugfix search list, removed wrapping div profile_info_search, bugfix checking profile_btn_top if exists in common

--- a/apps/app2/css/app.css
+++ b/apps/app2/css/app.css
@@ -596,12 +596,12 @@ height: 25px;
 	display:flex;
 }
 /*COMMON*/
-#profile_info_search{
-	visibility: hidden;
-	max-height: calc(100% - 140px) !important;
+#profile_input_row{
+	visibility:hidden;
 }
 #profile_search_list_wrap{
-	max-height: calc(100% - 140px) !important;
+	max-height: calc(100% - 250px) !important;
+	top: 112px;
 }
 #profile_search_icon{
 	display: none !important;
